Loader przy pobieraniu danych

--- a/zero-places/frontend/src/index.css
+++ b/zero-places/frontend/src/index.css
@@ -25,3 +25,9 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.loader {
+  width: 70vmin!important;
+  max-width: 20vw;
+  height: auto!important;
+}
